--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
+    "react-markdown": "^10.1.0",
+    "react-select": "^5.10.2",
     "socket.io": "^4.8.1"
   }
 }
