--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
+    "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
