--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
     "react-select": "^5.10.2",
+    "sass": "^1.94.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
